--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.13",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "expo": "~46.0.16",
+    "expo-checkbox": "~2.2.0",
     "expo-status-bar": "~1.4.0",
+    "fusioncharts": "^3.19.0",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-fusioncharts": "^4.0.0",
+    "react-native": "0.69.6",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-paper": "^4.12.5",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
+    "react-native-svg": "^9.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
